# desaturate_image

./: CMakeLists.txt  main.cpp  testing.exr  x.pgm
